# dropprint

./: LICENCE  README.md  crea-lanciatore.sh  dropprint.py  pyproject.toml  rimuovi-lanciatore.sh
packaging/: dropprint.desktop  install_opensuse.sh
src/dropprint/: app.py
