[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dropprint"
version = "0.1.0"
description = "Drag and drop printing utility for Linux with CUPS and system tray support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "jambolo"}
]
dependencies = [
  "pycups",
  "PyQt6",
]

[project.scripts]
dropprint = "dropprint:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
dropprint = ["assets/*.png", "assets/*.svg"]

[tool.setuptools.packages.find]
where = ["src"]
